<resources>
    <string name="app_name">World News</string>
    <string name="facebook_app_id">535139336821072</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_bookmarks">Trang đánh dấu</string>
    <string name="action_fillter">Bộ lọc</string>
    <string name="action_clearfillter">Xóa bộ lọc</string>
    <string name="userimage">avatar</string>
    <string name="ic_expand">expand</string>
    <string name="ic_search">search</string>
    <string name="login">đăng nhập</string>
    <string name="quicksearch">Tìm nhanh</string>
    <string name="categoryname">Chuyên mục</string>
    <string name="taghot">Hot</string>
    <string name="tagNew">New</string>
    <string name="waitlogin">Logining</string>
    <string name="savebookmark">Đã lưu bài viết</string>
    <string name="removebookmark">Đã bỏ lưu bài viết</string>
</resources>
