<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_filter"
        android:icon="@drawable/ic_like"
        android:orderInCategory="100"
        android:title="@string/action_fillter"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_clearfilter"
        android:icon="@drawable/ic_like"
        android:orderInCategory="100"
        android:title="@string/action_clearfillter"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_bookmarks"
        android:orderInCategory="100"
        android:title="@string/action_bookmarks"
        app:showAsAction="never"
        android:icon="@drawable/ic_like"/>
</menu>
