<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">

    <include
        layout="@layout/app_bar_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="@dimen/navigation_drawer_width"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="false">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/linearLayout_headerdrawer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RelativeLayout
                    android:id="@+id/relativeLayoutUser"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/nav_header_height"
                    android:background="@drawable/side_nav_bar"
                    android:gravity="center_vertical"
                    android:paddingLeft="30dp"
                    android:paddingStart="30dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <com.joooonho.SelectableRoundedImageView
                            android:id="@+id/selectableRIVAvatar"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_margin="5dp"
                            android:scaleType="centerCrop"
                            android:src="@drawable/icon_user"
                            android:tint="@color/white"
                            android:visibility="gone"
                            app:sriv_border_color="@android:color/white"
                            app:sriv_border_width="2dp"
                            app:sriv_oval="true" />

                        <ImageView
                            android:id="@+id/imageViewNotLogin"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_margin="5dp"
                            android:contentDescription="@string/userimage"
                            android:src="@drawable/ic_not_login_profile"
                            android:visibility="visible" />

                        <TextView
                            android:id="@+id/textViewUsername"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/login"
                            android:textColor="@color/textViewLogin_while"
                            android:textSize="18sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/ln_expandright"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="15dp"
                            android:layout_height="15dp"
                            android:contentDescription="@string/ic_search"
                            android:src="@drawable/ic_expand_right"
                            android:tint="@color/expand_while" />

                    </LinearLayout>


                </RelativeLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/nav_header_height"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="12dp"
                        android:layout_marginEnd="15dp"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="15dp"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="12dp"
                        android:background="@drawable/bg_search"
                        android:gravity="center_vertical"
                        android:orientation="horizontal"
                        android:paddingEnd="10dp"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:paddingStart="10dp">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="20"
                            android:contentDescription="@string/ic_search"
                            android:src="@drawable/ic_search"
                            android:tint="@color/colorBorder" />

                        <org.droidparts.widget.ClearableEditText
                            android:id="@+id/editTextSearch"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginStart="5dp"
                            android:layout_marginLeft="5dp"
                            android:layout_weight="1"
                            android:background="@null"
                            android:ems="10"
                            android:hint="@string/quicksearch"
                            android:imeOptions="actionSearch"
                            android:inputType="text"
                            android:maxLines="1"
                            android:scrollHorizontally="true"
                            android:textColor="@color/text_search"
                            android:textColorHint="@color/colorBorder"
                            android:textSize="16sp"/>
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/back_ground_color"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/categoryname"
                        android:textColor="@android:color/holo_red_dark"
                        android:textSize="@dimen/text_size_large" />
                </LinearLayout>

            </LinearLayout>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recyclerViewCategory"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/linearLayout_headerdrawer"
                android:background="#ffffff"
                android:choiceMode="singleChoice"
                android:fitsSystemWindows="true"></android.support.v7.widget.RecyclerView>
        </RelativeLayout>

    </android.support.design.widget.NavigationView>


</android.support.v4.widget.DrawerLayout>
